Add README and format project files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "string": "cpp"
+        "*.embeddedhtml": "html",
+        "string": "cpp",
+        "vector": "cpp",
+        "filesystem": "cpp"
     }
 }
